Set "rel" when converting absolute touchpad coordinates to relative (#20661)

We unset "abs" and convert to relative, but never set "rel" so the events
don't get posted. This bit got broken in 43dd2a959243877.

X.Org Bug 20661 <http://bugs.freedesktop.org/show_bug.cgi?id=20661>

Signed-off-by: Peter Hutterer <peter.hutterer@who-t.net>